<resources>
    <string name="app_name">Visa Business</string>
    <string name="nav_name">One Visa Connect</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_country">Country</string>
    <string name="login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Invalid Password.</string>
    <string name="error_confirm_password">Confirm password is not same</string>
    <string name="error_email">Email is not valid</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="wallet_title">Title</string>
    <string name="wallet_amount">Amount</string>
    <string name="create_new_user">New User? Register</string>

    <!-- Password strength-->
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>

    <!-- strings in navigation menu-->
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="history">History</string>
    <string name="wallets">Wallets</string>

    <!-- strings in register_activity activity-->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Account</string>
    <string name="nav_header_subtitle">suraj@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="home">Home</string>

    <!-- Payment Done Activity -->
    <string name="payment_done">Transaction Complete</string>
    <string name="thank_you">Thank you!</string>
    <string name="done">Done</string>
    <string name="title_activity_home2">HomeActivity2</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>